--- a/To-Do list/src/css/Form.css
+++ b/To-Do list/src/css/Form.css
@@ -1,6 +1,7 @@
 /* Container */
 .todo-container {
-  max-width: 500px;
+  max-width: 600px;
+  max-height: 600px;
   margin: 2rem auto;
   text-align: center;
   font-family: "Handlee", cursive;
@@ -22,9 +23,10 @@
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
   position: relative;
+  
 }
 
-/* Pin effect */
+
 .todo-container form::before {
   content: "";
   width: 16px;
@@ -35,7 +37,7 @@
   top: 8px;
   left: 50%;
   transform: translateX(-50%);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
 }
 
 /* Labels */
@@ -54,8 +56,11 @@
   box-shadow: inset 0 2px 4px rgba(1, 1, 1, 0.222);
   font-size: 1rem;
   font-style: italic;
-  color:grey;
+  font-family: "Handlee", cursive;
+  font-weight: 400;
+  color:rgb(0, 0, 0);
 }
+
 
 /* Button */
 .todo-container button {
