--- a/To-Do list/src/css/todos.css
+++ b/To-Do list/src/css/todos.css
@@ -3,12 +3,20 @@
   position: relative;
   flex-direction: column;
   gap: 0.75rem;
-  background: #fffbe6; 
+  background: #fffbe6;
   padding: 1.5rem;
   margin-bottom: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
   position: relative;
+  justify-content: end;
+  align-items: self-start;
+}
+.todo h3 {
+  background-color: #fffbe6 !important;
+}
+.todo p {
+  background-color: #fffbe6 !important;
 }
 
 .todo button{
@@ -19,6 +27,9 @@ cursor: pointer;
 background: none;
 border: none;
 color:rgb(186, 8, 8)
+}
+.material-symbols-outlined{
+  background: #fffbe6;
 }
 .arrow_up{
   position: absolute;
